--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ImageToText</string>
     <string name="title_activity_upload_image">UploadImage</string>
     <string name="title_activity_my_documents">MyDocuments</string>
+    <string name="select_image">Select image</string>
 </resources>
