--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_upload_image">UploadImage</string>
     <string name="title_activity_my_documents">MyDocuments</string>
     <string name="select_image">Select image</string>
+    <string name="blank_note">Blank Note</string>
+    <string name="convert_image">Convert Image</string>
 </resources>
